# facet-args

./: CHANGELOG.md  Cargo.toml  README.md
src/: arg.rs  deserialize.rs  fields.rs  format.rs  lib.rs  parse.rs  results.rs
src/deserialize/: debug.rs  error.rs  span.rs
tests/: sequence.rs  simple.rs  subspans.rs
tests/snapshots/: err__error_bool_with_invalid_value_positional.snap  err__error_char_with_multiple_chars.snap  err__error_complex_nested_structure.snap  err__error_invalid_ip_address.snap  err__error_missing_value_for_argument.snap  err__error_missing_value_for_argument_short_eof.snap  err__error_missing_value_for_argument_short_missed.snap  err__error_negative_value_for_unsigned.snap  err__error_nested_struct_with_scalar.snap  err__error_non_struct_type_not_supported.snap  err__error_number_outside_range.snap  err__error_option_with_multiple_values.snap  err__error_out_of_range.snap  err__error_tuple_struct_field_access.snap  err__error_unexpected_positional_arg.snap  err__error_unknown_argument.snap  err__error_vec_with_incompatible_types.snap  err__error_wrong_type_for_argument.snap  simple__missing_required_arg.snap
